Rename `label` to `txType`
