# openapi/openapi.yaml
@@ -2383,7 +2383,7 @@ components:
         - affiliateAddress
         - memo
         - isStreamingSwap
-        - label
+        - txType
       properties:
         streamingSwapMeta:
           $ref: '#/components/schemas/StreamingSwapMeta'
@@ -2411,11 +2411,11 @@ components:
             type: boolean
             description: indicate whether this action was streaming
             example: true
-        label:
+        txType:
             type: string
             description: |
               The type of the transaction given from its Memo. 
-              Type of labels: 
+              Type of Transaction type: 
               "unknown", "add", "withdraw", "swap", "limitOrder", "outbound", "donate",
               "bond", "unbond", "leave", "yggdrasilFund", "yggdrasilReturn", "reserve",
               "refund", "migrate", "ragnarok", "switch", "noOp", "consolidate", "thorname",
@@ -2471,7 +2471,7 @@ components:
         - memo
         - affiliateFee
         - affiliateAddress
-        - label
+        - txType
       properties:
         networkFees:
           $ref: '#/components/schemas/NetworkFees'
@@ -2487,11 +2487,11 @@ components:
         affiliateAddress:
           type: string
           description: Affiliate fee address of the swap, empty if fee swap
-        label:
+        txType:
           type: string
           description: | 
             The type of the transaction given from its Memo
-            Type of labels: 
+            Type of Transaction type: 
             "unknown", "add", "withdraw", "swap", "limitOrder", "outbound", "donate",
             "bond", "unbond", "leave", "yggdrasilFund", "yggdrasilReturn", "reserve",
             "refund", "migrate", "ragnarok", "switch", "noOp", "consolidate", "thorname",
